--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ tensorflow==2.1.0
 tf-agents==0.4.0
 matplotlib==3.2.1
 pandas==1.0.3
-scikit-learn==0.22.2
+scikit-learn==0.22.2.post1
 jupyter==1.0.0
 notebook==6.0.3
 jupyterlab==2.1.2
