--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,7 @@ scikit-learn==0.22.2.post1
 jupyter==1.0.0
 notebook==6.0.3
 jupyterlab==2.1.2
+pydot==1.4.1
+#progress bar - but it doesn't work
+#tensorflow-addons==0.9.1
+#typeguard==2.7.1
