--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
-tensorflow==2.1.0
-tf-agents==0.4.0
+tensorflow==2.2.0
+
 matplotlib==3.2.1
-pandas==1.0.3
-scikit-learn==0.22.2.post1
+pandas==1.0.4
+scikit-learn==0.23.1
 jupyter==1.0.0
 notebook==6.0.3
 jupyterlab==2.1.2
 pydot==1.4.1
+
 #progress bar - but it doesn't work
 #tensorflow-addons==0.9.1
 #typeguard==2.7.1
 
 #access to Google Trends
-pytrends==4.7.2
+pytrends==4.7.3
